feat(teamsmembers): introduce admin role
Add isAdmin flag across Member domain, persistence layer and DTOs, enabling
administrator identification at login time.